# evalcards

./: .gitignore  404.html  CHANGELOG.md  README-english.md  README.md  docs.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
DEMO/: index.html
api/: index.html
docs/: DEMO.md  api.md  index.md
docs/img/evalcards_demo/binary/: rep_bin.md
docs/img/evalcards_demo/forecast/: rep_forecast.md
docs/img/evalcards_demo/multiclass/: rep_multi.md
docs/img/evalcards_demo/regression/: rep_reg.md
scripts/: capture_html.py  generate_assets.py
search/: search_index.json
src/evalcards/: __init__.py  cli.py  config.py  evaluators.py  generator.py  insights.py  models.py  plotting.py  plotting_interactive.py  report.py
src/evalcards/templates/: report.html.j2  report.md.j2
